update: Added fade for carousel. fix: Added fix for momentum scrolling on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+/*
+ *  Following rule fixes an issue where the momentum
+ *  scroll on iOS Safari is disabled.
+ *  http://stackoverflow.com/questions/12845892/ios-overflow-x-or-position-absolute-makes-scrolling-choppy
+ */
+* {
+  -webkit-overflow-scrolling: touch;
+}
+
 html,
 body {
   font-family: 'Raleway', sans-serif;
@@ -37,6 +46,16 @@ footer {
 .title-buffer {
   position: relative;
   top: 10px;
+}
+
+.move-right {
+  position: relative;
+  left: 2em;
+}
+
+.move-left {
+  position: relative;
+  right: 2em;
 }
 
 /* img rule to keep images in center of divs*/
@@ -102,6 +121,40 @@ a:hover {
 .glyphicon-chevron-left,
 .glyphicon-chevron-right {
   color: black;
+}
+
+.remove-top-margin {
+  margin-top: 0;
+}
+
+/*
+ * Carouself fade
+ */
+
+.carousel-fade .carousel-inner .item {
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+.carousel-fade .carousel-inner .item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  opacity: 0;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+.carousel-fade .carousel-control {
+  z-index: 2;
 }
 
 /*
